<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="gender">"Gender"</string>
    <string name="male">"Male"</string>
    <string name="female">"Female"</string>
    <string name="birth">"Birthday"</string>
    <string name="height">"Height"</string>
    <string name="weight">"Weight"</string>
    <string name="str_sync_waiting_notify">"Waiting for update to the Wave..."</string>
    <string name="str_sync_suc_notify">"Successfully updated!"</string>
    <string name="height_picker_dialog_title">"Set height"</string>
    <string name="weight_picker_dialog_title">"Set weight"</string>
    <string name="step_picker_dialog_title">"Set target (steps)"</string>
    <string name="progress_title_finish">"Done"</string>
    <string name="target">"Target"</string>
    <string name="unit">"step"</string>
    <string name="steps">"Steps"</string>
    <string name="calories">"Calories"</string>
    <string name="distances">"Distance"</string>
    <string name="length_units">"km"</string>
    <string name="length_units_m">"m"</string>
    <string name="today">"Today"</string>
    <string name="yesterday">"Yesterday"</string>
    <string name="toast_setting_birth">"Please set birth date"</string>
    <string name="toast_setting_height">"Please set height"</string>
    <string name="toast_setting_weight">"Please set weight"</string>
    <string name="profile_finish">"Setting finished"</string>
    <string name="settings">"Settings"</string>
    <string name="share">"Share"</string>
    <string name="str_set_bluetooth">"Set Bluetooth"</string>
    <string name="Bluetooth_Enabled">"Bluetooth Enabled"</string>
    <string name="Bluetooth_Disabled">"Bluetooth Disabled"</string>
    <string name="str_set_bluetooth_content">"Bluetooth activation required for Wave connection, continue?"</string>
    <string name="str_set_bluetooth_open">"Turn on"</string>
    <string name="str_add_device">"Add device"</string>
    <string name="str_bluetooth_disconnect">"Retry"</string>
    <string name="str_bluetooth_connecting">"Connecting..."</string>
    <string name="str_bluetooth_connected">"Connected"</string>
    <string name="str_bluetooth_turnoff">"Bluetooth off"</string>
    <string name="str_sports">"Activity"</string>
    <string name="str_sleep">"Sleep"</string>
    <string name="str_sleep_title">"Total time"</string>
    <string name="str_sleep_condition">"Conditions:<xliff:g example="80" id="sleep_condition_percent">%s</xliff:g>%%"
    </string>
    <string name="about_version">"Current version"</string>
    <string name="about_title">"About"</string>
    <string name="profile_tick1">"To give you the most accurate readings, please complete your personal info"</string>
    <string name="profile_tick2">"Please set your personal info"</string>
    <string name="please_choose">"Please choose"</string>
    <string name="toToday">"To today"</string>
    <string name="my_devices">"My devices"</string>
    <string name="add_new_device">"Add new device"</string>
    <string name="setting_my_warn_noti_title">"Wave warning"</string>
    <string name="setting_my_warn_noti_desp1">"Target achieved"</string>
    <string name="setting_my_warn_noti_desp2">"%, fighting!"</string>
    <string name="setting_my_warn_dialog_desp1">"Target achieved"</string>
    <string name="setting_my_warn_dialog_desp2">"Go for it!"</string>
    <string name="setting_my_warn_nolonger">"Dismiss"</string>
    <string name="setting_my_clock_tips">"Double vibration, no lights"</string>
    <string name="setting_my_clock_text">"Wave alarm(s)"</string>
    <string name="setting_my_clock_repeat">"Repeat"</string>
    <string name="setting_my_clock_max_count">"Eight alarm maximum"</string>
    <string name="str_silent_sleep_explain">"Set your phone to silent mode when you change your Wave to sleep mode."
    </string>
    <string name="everyday">"Every day"</string>
    <string name="setting_anti_lost_tip">"Three double vibrations + five lights blinking in turn"</string>
    <string name="setting_anti_lost_dialog_content">"When the Wave is far away from the phone, it will trigger the
        anti-loss alert (three double vibrations, five lights blinking in turn)."
    </string>
    <string name="str_notification_text_normal">"The Wave is in sleep mode"</string>
    <string name="str_notification_text_mute">"The Wave will be in sleep mode while phone in silent mode"</string>
    <string name="str_notification_text_low_battery">"The Wave battery level is lower than %s, please connect to the
        charger"
    </string>
    <string name="str_low_battery_dialog_title">"Wave low battery warning"</string>
    <string name="device_informtion_title">"Device information"</string>
    <string name="device_informtion_manufacture_name">"Manufacturer:"</string>
    <string name="device_informtion_model_number">"Device model:"</string>
    <string name="device_informtion_hw_revision">"Hardware version:"</string>
    <string name="device_informtion_sw_revision">"Software version:"</string>
    <string name="device_informtion_wait_read">"Waiting for connection..."</string>
    <string name="device_bind_available_devices">"Available devices"</string>
    <string name="str_snapshot_waitting">"Please wait..."</string>
    <string name="str_choose_device_title">"Set Bluetooth"</string>
    <string name="str_choose_device_open_bt">"Please turn on Bluetooth to pair with the Wave."</string>
    <string name="str_choose_bt_open_bt">"Turn on Bluetooth to connect to the Wave?"</string>
    <string name="str_bind_bt">"Bind Wave"</string>
    <string name="str_bind_wait">"Later"</string>
    <string name="str_remove_devices">"Log out"</string>
    <string name="str_remove_devices_title">"Log out of device"</string>
    <string name="str_remove_device_content">"Will disconnect from the Wave"</string>
    <string name="str_connected_device_tips">"You have connected to the Wave"</string>
    <string name="str_replace_device_tips">"Replace the currently connected Wave?"</string>
    <string name="str_chart_7_day">"Week"</string>
    <string name="str_chart_31_day">"Month"</string>
    <string name="str_chart_sleep_waste">"Pre-sleep time"</string>
    <string name="str_chart_sleep_effi">"Efficiency"</string>
    <string name="str_chart_sleep_total_time">"Total time"</string>
    <string name="str_chart_sleep_effi_pre">"Efficiency:"</string>
    <string name="str_chart_sleep_waste_pre">"Pre-sleep time:"</string>
    <string name="str_chart_sleep_total_pre">"Total time:"</string>
    <string name="str_chart_sport_target">"Target:"</string>
    <string name="str_share_failed">"Sharing failed"</string>
    <string name="add_device_charge_prev_step">"Previous step"</string>
    <string name="add_device_charge_next_step">"Next step"</string>
    <string name="add_device_battery_prev_step">"Previous step"</string>
    <string name="add_device_battery_next_step">"Charged to 20%"</string>
    <string name="add_device_connect_tip">"Searching for device..."</string>
    <string name="add_device_bind_success_done">"Begin the experience"</string>
    <string name="add_device_connect_fail_tip_1">"Device not found"</string>
    <string name="add_device_connect_fail_tip_2">"Please try to bring the device closer to the phone, but away from
        other phones or Waves"
    </string>
    <string name="add_device_connect_fail_tip_3">"Please keep away from other phones or Waves"</string>
    <string name="add_device_connect_fail_retry">"Retry"</string>
    <string name="add_device_bind_fail_tip_1">"Connection failed several times, possibly due to:"</string>
    <string name="add_device_bind_fail_tip_2">"1. Wave is too far away from the phone"</string>
    <string name="add_device_bind_fail_tip_3">"Tip: try to bring the Wave closer to the phone (within one metre)"
    </string>
    <string name="add_device_bind_fail_tip_4">"2. Make sure there are no existing connections between other
        Waves/phones"
    </string>
    <string name="add_device_bind_fail_tip_5">"Tip: keep the phone and Wave away from other devices"</string>
    <string name="add_device_bind_fail_tip_6">"3. Wave battery level is lower than 60%"</string>
    <string name="add_device_bind_fail_tip_7">"Tip: connect the Wave to the charger"</string>
    <string name="add_device_bind_fail_retry">"Retry"</string>
    <string name="add_device_need_bind_tip_1">"Your Wave has been connected to another phone, reconnect?"</string>
    <string name="add_device_need_bind_bind">"Connect"</string>
    <string name="guide_battery_tip_1">"Ensuring battery life, please make sure your Wave is at least 20% charged."
    </string>
    <string name="guide_battery_tip_2"/>
    <string name="guide_battery_tip_comments"/>
    <string name="guide_bind_tip">"Find the Wave and tap it twice"</string>
    <string name="guide_bind_double_click">"Double tap"</string>
    <string name="guide_battery_charge_tip">"Please connect your Wave to the charger"</string>
    <string name="guide_connect_successful_tip">"Successfully connected!"</string>
    <string name="guide_connect_successful_tip_comments">"Wear your Wave and start running"</string>
    <string name="reminders_title">"Notification settings"</string>
    <string name="reminders_shake_title">"Wave vibration reminders"</string>
    <string name="reminders_shake_alarm">"Wave alarm"</string>
    <string name="reminders_shake_anti_lost">"Anti-loss alert"</string>
    <string name="reminders_shake_call_reminder">"Call reminder"</string>
    <string name="call_remind_all_incoming_call">"All incoming calls"</string>
    <string name="call_remind_only_in_the_list">"Only in the contacts list"</string>
    <string name="tip_7_title">"Wave signals"</string>
    <string name="tip_7_sub_1_title">"Wave alarm reminder"</string>
    <string name="tip_7_sub_1_content">"Six double vibrations"</string>
    <string name="tip_7_sub_2_title">"Call reminder"</string>
    <string name="tip_7_sub_2_content">"Six single vibrations + one light blinking"</string>
    <string name="tip_7_sub_3_title">"Anti-loss alert"</string>
    <string name="tip_7_sub_3_content">"Six double vibrations + five lights blinking in turn"</string>
    <string name="tester_name">MB12M Factory Test</string>
    <string name="tester_version">MB12M v2.0</string>
    <string name="test_model_mmi">MMI Test</string>
    <string name="test_auto">Auto</string>
    <string name="test_prepare">Starting Test Service\u2026</string>
    <string name="restart">Restart</string>
    <string name="result_title">MMI TEST STATUS</string>
    <string name="result_detail">PASSED</string>
    <string name="restart_question">Restart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="key_rssi">key_rssi</string>
    <string name="pref_min_rssi_title">Min Rssi</string>
    <string name="pref_min_rssi_sum">Set min rssi value to be detected.</string>
    <string name="key_device_name">device_name</string>
    <string name="pref_device_name_title">Device name</string>
    <string name="pref_device_name_sum">Preset device name to be detected</string>
    <string name="key_rom_version">rom_version</string>
    <string name="pref_rom_version_value">V1.0.0</string>
    <string name="pref_rom_version_title">Rom version</string>
    <string name="pref_rom_version_sum">Preset rom version to be detected</string>
    <string name="key_set_pcba">set_pcba</string>
    <string name="pref_set_pcba_value">000000000000000</string>
    <string name="pref_set_pcba_title">Set PCBA value</string>
    <string name="pref_set_pcba_sum">Preset PCBA to be detected</string>
    <string name="key_max_connect_value">key_max_connect_value</string>
    <string name="pref_max_connect_value_title">Maximum number of connections</string>
    <string name="pref_max_connect_value_sum">Set Maximum number of connections</string>
    <string name="device_name">MB12</string>
    <string name="back">Back</string>
</resources>