<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_title"
        android:textSize="20sp"
        android:id="@+id/result_textview_result"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"        />

    <TextView android:id="@+id/result_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_centerInParent="true"
        android:text="@string/result_detail"
        android:gravity="left"/>
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/restart_question"
        android:layout_above="@+id/result_linearLayout_restart"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/result_linearLayout_restart">
        <Button android:id="@+id/restart_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/yes"/>
        <Button android:id="@+id/restart_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/no"/>
    </LinearLayout>

</RelativeLayout>
