<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/connect_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/add_device_bind_fail_tip_1"
        style="@style/roboto_light"
        android:textSize="24dp"/>

    <TextView
        android:id="@+id/reason1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="180dp"
        android:text="@string/add_device_bind_fail_tip_2"
        android:textColor="@color/choose_device_button_color"
        style="@style/roboto_light"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/solution1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reason1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/add_device_bind_fail_tip_3"
        android:textColor="@color/choose_device_button_color"
        style="@style/roboto_light"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/reason2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/solution1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/add_device_bind_fail_tip_4"
        android:textColor="@color/choose_device_button_color"
        style="@style/roboto_light"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/solution2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reason2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/add_device_bind_fail_tip_5"
        android:textColor="@color/choose_device_button_color"
        style="@style/roboto_light"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/reason3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/solution2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/add_device_bind_fail_tip_6"
        android:textColor="@color/choose_device_button_color"
        style="@style/roboto_light"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/solution3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reason3"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/add_device_bind_fail_tip_7"
        android:textColor="@color/choose_device_button_color"
        style="@style/roboto_light"
        android:textSize="16dp"/>

    <Button
        android:id="@+id/btn_add_device_bind_fail_retry"
        android:layout_width="178dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_add_device_highlight"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/add_device_bind_fail_retry"
        android:textColor="@color/add_device_guid_button_color"
        style="@style/roboto_light"
        android:textSize="14sp"/>

</RelativeLayout>