<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tester_name"
        android:textSize="20sp" />

    <TextView android:id="@+id/mini_version"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:text="@string/tester_version"/>
    <TextView android:id="@+id/mini_test_model"
              android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="2"
              android:textSize="20sp"
              android:gravity="center_horizontal"
              android:text="@string/test_model_mmi"/>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/test_auto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/test_auto"/>
        <!--<Button android:id="@+id/test_manual"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:onClick="onClick"-->
            <!--android:text="@string/test_manual"/>-->
    </LinearLayout>

</LinearLayout>
