<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:gravity="center"
    >
    
    <TextView
        android:id="@+id/setting_my_warn_dialog_desp1" 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/setting_my_warn_dialog_desp1"
        android:layout_centerHorizontal="true"
        />
    
    <TextView
        android:id="@+id/setting_my_warn_dialog_percent"  
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/setting_my_warn_dialog_desp1"
        android:layout_centerHorizontal="true"
        />
        
    <TextView
        android:id="@+id/setting_my_warn_dialog_desp2"  
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/setting_my_warn_dialog_desp2"
        android:layout_below="@id/setting_my_warn_dialog_percent"
        android:layout_centerHorizontal="true"
        />
  
	<CheckBox
        android:id="@+id/setting_my_warn_dialog_checkbox"  
       	android:layout_height="wrap_content"
       	android:layout_width="wrap_content"
       	android:text="@string/setting_my_warn_nolonger"
       	android:layout_below="@id/setting_my_warn_dialog_desp2"
       	android:layout_centerHorizontal="true"
       	/>
  
</RelativeLayout>
