<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/tips_bg">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/tip_7_title"
            android:textSize="22sp"
            style="@style/roboto_light"
            android:textColor="#409df3"/>
        <RelativeLayout 
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp" >
        	<ImageView
		        android:id="@+id/help_tips_7_sub1"
		        android:layout_height="134dp"
		        android:layout_width="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:src="@drawable/tips_7_sub1"/>
		    <LinearLayout 
	            android:layout_height="match_parent"
	            android:layout_width="match_parent"
	            android:layout_alignTop="@id/help_tips_7_sub1"
	            android:layout_alignBottom="@id/help_tips_7_sub1"
	            android:layout_toRightOf="@id/help_tips_7_sub1"
	            android:orientation="vertical"
	            android:gravity="center_vertical" >
			    <TextView
		            android:layout_height="wrap_content"
		            android:layout_width="match_parent"
		            android:text="@string/tip_7_sub_1_title"
		            android:textStyle="bold"
		            style="@style/roboto_light"
		            android:textSize="14sp"/>
	            <TextView
		            android:layout_height="wrap_content"
		            android:layout_width="match_parent"
		            android:text="@string/tip_7_sub_1_content"
		            style="@style/roboto_light"
		            android:textSize="14sp"/>
		    </LinearLayout>
        </RelativeLayout>
        <RelativeLayout 
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
		    <ImageView
		        android:id="@+id/help_tips_7_sub2"
		        android:layout_height="134dp"
		        android:layout_width="wrap_content"
		        android:layout_alignParentRight="true"
		        android:src="@drawable/tips_7_sub2"/>
		    <LinearLayout 
	            android:layout_height="match_parent"
	            android:layout_width="match_parent"
	            android:layout_alignTop="@id/help_tips_7_sub2"
	            android:layout_alignBottom="@id/help_tips_7_sub2"
	            android:layout_toLeftOf="@id/help_tips_7_sub2"
	            android:orientation="vertical"
	            android:gravity="center_vertical">
			    <TextView
		            android:layout_height="wrap_content"
		            android:layout_width="match_parent"
		            android:text="@string/tip_7_sub_2_title"
		            android:textStyle="bold"
		            style="@style/roboto_light"
		            android:textSize="14sp"/>
	            <TextView
		            android:layout_height="wrap_content"
		            android:layout_width="match_parent"
		            android:text="@string/tip_7_sub_2_content"
		            style="@style/roboto_light"
		            android:textSize="14sp"/>
		    </LinearLayout>
        </RelativeLayout>
        <RelativeLayout 
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
        	<ImageView
		        android:id="@+id/help_tips_7_sub3"
		        android:layout_height="134dp"
		        android:layout_width="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:src="@drawable/tips_7_sub3"/>
		    <LinearLayout 
	            android:layout_height="match_parent"
	            android:layout_width="match_parent"
	            android:layout_alignTop="@id/help_tips_7_sub3"
	            android:layout_alignBottom="@id/help_tips_7_sub3"
	            android:layout_toRightOf="@id/help_tips_7_sub3"
	            android:orientation="vertical"
	            android:gravity="bottom"
	            android:layout_marginBottom="10dp">
			    <TextView
		            android:layout_height="wrap_content"
		            android:layout_width="match_parent"
		            android:text="@string/tip_7_sub_3_title"
		            android:textStyle="bold"
		            style="@style/roboto_light"
		            android:textSize="14sp"/>
	            <TextView
		            android:layout_height="wrap_content"
		            android:layout_width="match_parent"
		            android:text="@string/tip_7_sub_3_content"
		            style="@style/roboto_light"
		            android:textSize="14sp"/>
		    </LinearLayout>
        </RelativeLayout>
        </LinearLayout>
</FrameLayout>